Fix level name overlap

--- a/src/css/screens/screen-levelSelect.less
+++ b/src/css/screens/screen-levelSelect.less
@@ -34,12 +34,14 @@ This file is part of Cuidando Bem.
 }
 
 p.title {
-    font-size: 5em;
+    font-size: 4.2em;
     color: black;
     margin: 0;
     position: relative;
-    top: -5%;
+    top: -8%;
     z-index: 5;
+    width: 30%;
+    left: 35%;
 }
 
 .level:hover:not(.disabled){
